[tool.poetry]
name = "shootbox"
version = "0.2"
description = "2D Top-down Sandbox game, written in Python"
authors = ["FireFall <firekonstantin@mail.ru>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pygame-ce = "2.4.0.dev4"
pypresence = "^4.3.0"
orjson = "^3.9.9"
numpy = "^1.26.1"
numba = "^0.58.1"
nuitka = "^1.8.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
